# llm-gateway

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  config.example.yaml  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md  README.md
.claude/agents/: workflow-coder.md  workflow-planner.md  workflow-reviewer.md  workflow-tester.md
.claude/commands/: workflow.md
.claude/knowledge/: architecture.md  workflow.md
.claude/rules/: domain-invariants.md  engineering.md
app/: dashboard.py  main.py
app/api/: dashboard.py  dashboard_renderer.py  dependencies.py
app/core/: config.py  database.py  errors.py  logging.py  security.py
app/cost/: tracker.py
app/providers/: base.py  openai_compatible.py  registry.py
app/repositories/: requests_repo.py
app/routing/: classifier.py  classifier_caller.py  executor.py  features.py  gateway.py  health.py  pools.py  router.py  rules.py
app/schemas/: openai.py
docs/: docker.md
tests/: conftest.py  test_acceptance_m1.py  test_acceptance_m2.py  test_acceptance_m3.py  test_acceptance_m4.py  test_acceptance_m5.py  test_app_integration.py  test_chat_endpoint.py  test_classifier.py  test_classifier_caller.py  test_classifier_endpoint.py  test_config.py  test_cost.py  test_dashboard.py  test_dashboard_service.py  test_database.py  test_errors.py  test_executor.py  test_fallback_endpoint.py  test_features.py  test_gateway.py  test_health.py  test_logging.py  test_models_endpoint.py  test_pools.py  test_providers.py  test_router.py  test_rules.py  test_security.py  test_tester_m3.py  test_tester_m4.py
(+10 files in other folders)
